force-app/main/default/objects/SVMXA360__ConditionalOutput__c/SVMXA360__ConditionalOutput__c.object-meta.xml
<CustomObject>
    <description>This object is used to track the Work order and the Maintenance Plan details when a work order is generated for an A360 Maintenance Plan based on the values in a Work Rule.</description>
    <label>A360 Conditional Output</label>
    <nameField>
        <displayFormat>C-{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>A360 Conditional Outputs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>