force-app/main/default/objects/SVMXA360__ConditionalOutput__c/fields/SVMXA360__MaintenancePlanId__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__MaintenancePlanId__c</fullName>
    <description>Master Detail relationship to A360 Maintenance Plan for which Work Order is generated.</description>
    <label>A360 Maintenance Plan</label>
    <referenceTo>SVMXA360__SM_MaintenancePlan__c</referenceTo>
    <relationshipLabel>A360 Conditional Outputs</relationshipLabel>
    <relationshipName>A360_Conditional_Outputs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>