force-app/main/default/objects/SVMXA360__ConditionalOutput__c/fields/SVMXA360__MaintenanceWorkRuleId__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__MaintenanceWorkRuleId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the Maintenance Work Rule which is applied on the Work Order generated.</description>
    <label>A360 Maintenance Work Rule</label>
    <referenceTo>SVMXA360__SM_MaintenanceWorkRule__c</referenceTo>
    <relationshipLabel>A360 Conditional Outputs</relationshipLabel>
    <relationshipName>A360_Conditional_Outputs</relationshipName>
    <type>Lookup</type>
</CustomField>