force-app/main/default/objects/SVMXA360__ConditionalOutput__c/fields/SVMXA360__WorkOrderId__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__WorkOrderId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the Work Order generated from A360 Maintenance Plan</description>
    <label>Work Order</label>
    <referenceTo>WorkOrder</referenceTo>
    <relationshipLabel>A360 Conditional Outputs</relationshipLabel>
    <relationshipName>A360_Conditional_Outputs</relationshipName>
    <type>Lookup</type>
</CustomField>